[package]
name = "jetstream"
version = "10.0.0"
edition = "2021"
description = "Jetstream is a RPC framework for Rust, based on the 9P protocol and QUIC."
documentation = "https://jetstream.rs"
repository = "https://github.com/sevki/jetstream"
license = "BSD-3-Clause"

[package.metadata.docs.rs]
# Features to pass to Cargo (default: [])
features = ["all"]

[lib]
bench = false
crate-type = ["cdylib", "rlib"]

[[example]]
bench = false
name = "echo"

[[example]]
name = "iroh_echo"
bench = false
required-features = ["iroh"]

[[test]]
bench = false
name = "jetstream_wire_format"
path = "tests/jetstream_wire_format/mod.rs"

[[test]]
name = "server"
bench = false

[[bench]]
harness = false
name = "perf"

[dependencies]
async-trait = "0.1.89"
futures = "0.3.31"
jetstream_9p = { workspace = true, optional = true }
jetstream_iroh = { workspace = true, optional = true }
jetstream_macros = { workspace = true }
jetstream_quic = { workspace = true, optional = true }
jetstream_rpc = { workspace = true }
jetstream_websocket = { workspace = true, optional = true }
jetstream_cloudflare = { workspace = true, optional = true }
jetstream_wireformat = { workspace = true }
lazy_static = "1.5.0"
tracing = { version = "0.1.41", optional = true }
tracing-subscriber = { version = "0.3.20", optional = true }
trait-variant = "0.1.2"

[build-dependencies]
cfg_aliases = {workspace = true}

[dev-dependencies]
criterion = { version = "0.7.0", features = ["async_tokio"] }
jetstream_rpc = { workspace = true, features = ["s2n-quic", "turmoil"] }
jetstream_wireformat = { workspace = true, features = ["all"] }
okstd = { version = "1.0.2", features = ["macros"] }
s2n-quic = { workspace = true }
tokio = { version = "1.47.1", features = ["full"] }
turmoil = { workspace = true }

[features]
default = ["tracing"]
9p = ["dep:jetstream_9p"]
all = ["9p", "iroh", "quic", "tracing", "websocket", "tokio", "wasm"]
iroh = ["dep:jetstream_iroh", "jetstream_rpc/iroh"]
quic = ["dep:jetstream_quic", "jetstream_rpc/s2n-quic"]
tokio = ["jetstream_wireformat/tokio"]
tracing = ["dep:tracing", "dep:tracing-subscriber"]
wasm = ["jetstream_wireformat/tokio"]
websocket = ["dep:jetstream_websocket"]
cloudflare = ["dep:jetstream_cloudflare", "jetstream_rpc/cloudflare"]
serde = ["jetstream_rpc/serde"]

[patch.crates-io]
jetstream_macros = { path = "components/jetstream_macros" }
jetstream_wireformat = { path = "components/jetstream_wireformat" }

[workspace]
members = [
  "components/jetstream_9p",
  "components/jetstream_cloudflare",
  "components/jetstream_radar",
  "components/jetstream_iroh",
  "components/jetstream_libc",
  "components/jetstream_macros",
  "components/jetstream_quic",
  "components/jetstream_rpc",
  "components/jetstream_ufs",
  "components/jetstream_websocket",
  "components/jetstream_wireformat",
  "fuzz",
]

[workspace.package]
version = "10.0.0"
edition = "2021"
description = "Jetstream is a RPC framework for Rust, based on the 9P protocol and QUIC."
documentation = "https://jetstream.rs"
readme = "README.md"
repository = "https://github.com/sevki/jetstream"
license = "BSD-3-Clause"

[workspace.dependencies]
iroh = { version = "0.93.2" }
jetstream_9p = { path = "components/jetstream_9p", version = "*" }
jetstream_cloudflare = { path = "components/jetstream_cloudflare", version = "*" }
jetstream_iroh = { path = "components/jetstream_iroh", version = "*" }
jetstream_libc = { path = "components/jetstream_libc", version = "*" }
jetstream_macros = { path = "components/jetstream_macros", version = "*" }
jetstream_quic = { path = "components/jetstream_quic", version = "*" }
jetstream_rpc = { path = "components/jetstream_rpc", version = "*" }
jetstream_websocket = { path = "components/jetstream_websocket", version = "*" }
jetstream_wireformat = { path = "components/jetstream_wireformat", version = "*", default-features = true }
okid = "0.22.0"
s2n-quic = "1.59.0"
tokio-util = { version = "0.7.16", features = ["codec"] }
turmoil = "0.6.5"
url = "2.5.7"
cfg_aliases = "0.2.1"
