[package]
name = "e2e_tests"
version = "3.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
publish = false

[dependencies]
async-trait = "0.1.80"
futures = "0.3.30"
jetstream = { version = "3.0.0", path = ".." }
tokio = { version = "1.38.0", features = ["full"] }
