[package]
name = "fuzz"
version = "15.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.jetstream]
path = ".."
features = ["9p"]

[[bin]]
name = "wireformat"
path = "fuzz_targets/wireformat.rs"
test = false
doc = false
bench = false
