[package]
name = "jetstream_fuzz"
version = "6.6.2"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.jetstream]
path = ".."

[[bin]]
name = "wireformat"
path = "fuzz_targets/wireformat.rs"
test = false
doc = false
bench = false
