[package]
name = "jetstream_9p"
version = "9.4.2"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true
[lib]
bench = false
crate-type = ["cdylib", "rlib"]
[dependencies]
jetstream_macros = { workspace = true }
jetstream_wireformat = { workspace = true }
jetstream_rpc = { workspace = true }
jetstream_libc = { workspace = true }
trait-variant = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
