[package]
name = "jetstream_9p"
version = "11.0.2"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true
[lib]
bench = false
crate-type = ["cdylib", "rlib"]
[dependencies]
jetstream_macros = { version = "11.0.2", path = "../jetstream_macros" }
jetstream_wireformat = { version = "11.0.2", path = "../jetstream_wireformat" }
jetstream_rpc = { version = "11.0.2", path = "../jetstream_rpc" }
jetstream_libc = { version = "11.0.2", path = "../jetstream_libc" }
trait-variant = "0.1.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
