[package]
name = "jetstream_client"
version = "6.3.2"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
anyhow = "1.0.89"
futures = "0.3.31"
jetstream_9p = { version = "6.3.2", path = "../jetstream_9p" }
jetstream_rpc = { version = "6.3.2", path = "../jetstream_rpc" }
jetstream_wireformat = { version = "6.3.2", path = "../jetstream_wireformat", features = [
    "async",
] }
okstd = { version = "0.1.10" }
s2n-quic = "1.47.0"
