[package]
name = "jetstream_client"
version = "8.1.5"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true
[lib]
bench = false

[dependencies]
anyhow = "1.0.96"
futures = "0.3.31"
jetstream_9p = { version = "8.1.5", path = "../jetstream_9p" }
jetstream_rpc = { version = "8.1.5", path = "../jetstream_rpc" }
jetstream_wireformat = { version = "8.1.5", path = "../jetstream_wireformat", features = [
    "async",
] }
okstd = { version = "1.0.2" }
s2n-quic = "1.54.0"
tokio = { version = "1.44.2", features = ["full"] }
tokio-vsock = { version = "0.7.0", optional = true }
tokio-util = { version = "0.7.13", features = ["codec"] }
trait-variant = "0.1.2"
tungstenite = { version = "0.26.2", optional = true }

[features]
default = []
websocket = ["dep:tungstenite"]
