[package]
name = "jetstream_cloudflare"
version = "10.1.0"
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
askama = "0.14.0"
async-trait = "0.1.89"
futures = "0.3.31"
jetstream_rpc ={workspace = true, features=["cloudflare"], default-features=false}
jetstream_wireformat={workspace = true, default-features=false}
thiserror = "2.0.17"
worker = { workspace = true }
