[package]
name = "jetstream_cluster"
version = "6.5.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true
[lib]
bench = false

[dependencies]
trait-variant = "0.1.2"
jetstream_wireformat = { version = "6.5.0", path = "../jetstream_wireformat" }
okstd = { version = "0.1.10", features = ["macros"] }
tokio = { version = "1.40.0", features = ["full"] }
bytes = "1.8.0"
anyhow = "1.0.93"
s2n-quic = "1.47.0"
thiserror = "2.0.3"
rand = "0.8.5"
