[package]
name = "jetstream_codegen"
version = "16.0.0"
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
argh = "0.1.14"
cargo_metadata = "0.23.1"
convert_case = "0.11.0"
proc-macro2 = "1.0.106"
quote = "1.0.44"
sha256 = "1.6.0"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
toml = "1.0.3"
typeshare-core = "1.13.4"
