[package]
name = "jetstream_derive"
version = "5.1.2"
authors = ["Sevki <s@sevki.io>", "The ChromiumOS Authors"]
license = "BSD-3-Clause"
description = "Supporting proc-macro for the `jetstream` crate."
repository = "https://github.com/sevki/jetstream"
readme = "../../README.md"
edition = "2021"

[dependencies]
# rust analyzer doesn't understand the `quote` macro from `proc-macro2` so we
# need to use `syn` to parse the input and then use `quote` to generate the
syn = { version = "2.0.57", features = ["full", "extra-traits"] }
quote = "^1"
proc-macro2 = "1.0.79"
paste = "1.0.14"
convert_case = "0.6.0"
sha256 = "1.5.0"

[lib]
proc-macro = true

[dev-dependencies]
pretty_assertions = "1.4.0"
sha256 = "1.5.0"
