[package]
name = "jetstream_derive"

authors = ["Sevki <s@sevki.io>", "The ChromiumOS Authors"]
version = "6.0.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }

[dependencies]
# rust analyzer doesn't understand the `quote` macro from `proc-macro2` so we
# need to use `syn` to parse the input and then use `quote` to generate the
syn = { version = "2.0.57", features = ["full", "extra-traits"] }
quote = "^1"
proc-macro2 = "1.0.79"
paste = "1.0.14"
convert_case = "0.6.0"
sha256 = "1.5.0"

[lib]
proc-macro = true

[dev-dependencies]
insta = { version = "1.41.1", features = ["yaml"] }
pretty_assertions = "1.4.0"
prettyplease = "0.2.25"
sha256 = "1.5.0"
