[package]
name = "jetstream_distributed"
version = "8.0.1"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true
[lib]
bench = false

[dependencies]
trait-variant = "0.1.2"
okstd = { version = "0.2.0", features = ["macros"] }
tokio = { version = "1.43.0", features = ["full"] }
bytes = "1.9.0"
anyhow = "1.0.94"
s2n-quic = "1.52.0"
thiserror = "2.0.9"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"], optional = true }
cel-interpreter = { version = "0.9.0", git = "https://github.com/sevki/cel-rust.git" }
interned = "0.1.6"
jetstream_rpc = { version = "8.0.1", path = "../jetstream_rpc" }
jetstream_wireformat = { version = "8.0.1", path = "../jetstream_wireformat" }
mac_address = "1.1.7"
sha2 = "0.10.8"


[features]
serde = ["dep:serde"]

[dev-dependencies]
insta = { version = "1.41.1", features = ["json", "yaml"] }
serde_json = "1.0.135"
