[package]
name = "jetstream_error"
version = "11.0.1"
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
iroh = { workspace = true, optional = true }
jetstream_wireformat.workspace = true
miette = { version = "7.6.0", features = ["fancy"] }
s2n-quic = { workspace = true, optional = true }
thiserror = "2.0.17"
worker = { workspace = true, optional = true }

[dev-dependencies]
insta = "1.46.1"
term-transcript = "0.4.0"


[features]
s2n-quic = ["dep:s2n-quic"]
iroh = ["dep:iroh"]
worker = ["dep:worker"]
test-paths = []
update-svg = []
