[package]
name = "jetstream_error"
version = "15.2.0"
edition.workspace = true
description.workspace = true
documentation.workspace = true
readme.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
askama = { version = "0.15.4", optional = true }
axum = { version = "0.8.8", default-features = false, optional = true }
iroh = { workspace = true, optional = true }
jetstream_wireformat = { version = "15.2.0", path = "../jetstream_wireformat" }
miette = { version = "7.6.0", features = ["fancy"], optional = true }
quinn = { version = "0.11", optional = true }
thiserror = "2.0.17"
tracing = "0.1.44"
tracing-error = { version = "0.2.1", default-features = false }
tracing-core = "0.1.36"
jetstream_macros = { version = "15.2.0", path = "../jetstream_macros" }
string-interner = { version = "0.19.0", default-features = false, features = ["backends"] }
source-map = { version = "0.15.0", optional = true }
tracing-subscriber = "0.3.22"

[dev-dependencies]
insta = "1.46.3"
term-transcript = "0.4.0"

[features]
default = ["miette", "source-info"]
miette = ["dep:miette"]
source-info = ["dep:source-map"]
quinn = ["dep:quinn"]
iroh = ["dep:iroh"]
test-paths = []
update-svg = []
