[package]
name = "jetstream_iroh"
version = "9.2.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3.31"
jetstream_rpc = { version = "9.2.0", path = "../jetstream_rpc" }
jetstream_wireformat = { version = "9.2.0", path = "../jetstream_wireformat" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
iroh = { version = "0.93.1"}
# https://github.com/n0-computer/iroh/issues/3476
pkarr = "=5.0"
url = "2.5.7"
