[package]
name = "jetstream_iroh"
version = "15.1.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
futures = "0.3.31"
jetstream_rpc = { version = "15.1.0", path = "../jetstream_rpc", features = [
  "iroh",
] }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["full"] }
iroh = { workspace = true }

pkarr = "5.0"
url = "2.5.7"
lazy_static = "1.5.0"
