[package]
name = "jetstream_libc"
version = "8.3.1"
edition = { workspace = true }
description = "Platform-specific libc bindings for jetstream"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true


[lib]
crate-type = [ "rlib"]
bench = false

[dependencies]
libc = { version = "0.2.170", default-features = false }
