[package]
name = "jetstream_libc"
version = "9.2.0"
edition = { workspace = true }
description = "Platform-specific libc bindings for jetstream"
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true

[lib]
crate-type = [ "rlib"]
bench = false

[dependencies]
libc = { version = "0.2.177", default-features = false }
[build-dependencies]
cfg_aliases = "0.2.1"
