[package]
name = "jetstream_macros"
version = "9.3.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation = { workspace = true }
[dependencies]
# rust analyzer doesn't understand the `quote` macro from `proc-macro2` so we
# need to use `syn` to parse the input and then use `quote` to generate the
syn = { version = "2.0.103", features = ["full", "extra-traits"] }
quote = "^1"
proc-macro2 = "1.0.92"
convert_case = "0.6.0"
sha256 = "1.5.0"
lazy_static = "1.5.0"

[lib]
proc-macro = true

bench = false

[dev-dependencies]
insta = { version = "1.43.2", features = ["filters", "yaml"] }
pretty_assertions = "1.4.0"
prettyplease = "0.2.34"
sha256 = "1.5.0"
trybuild = "1.0.112"
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
turmoil = "0.6.5"
okstd = { version = "1.0.2", features = ["macros"] }
