[package]
name = "jetstream_quic"
version = "9.4.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
h3-quinn = { version = "0.0.10", features = ["datagram", "tracing"] }
http = "1"
quinn = { version = "0.11", default-features = false, features = [
    "runtime-tokio",
    "rustls",
] }
rcgen = { version = "0.14" }
rustls = { version = "0.23", default-features = false, features = [
    "logging",
] }
rustls-native-certs = "0.8"
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "fmt",
    "ansi",
    "env-filter",
    "time",
    "tracing-log",
] }
octets = "0.3.3"

tracing-tree = { version = "0.4" }
h3 = { version = "0.0.8", features = ["tracing"] }
h3-webtransport = "0.1.2"
bytes = "1.10.1"
ed25519-dalek = "=2.2.0"

[dev-dependencies]
rustls-pemfile = "2.2.0"
