[package]
name = "jetstream_quic"
version = "12.0.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
h3-quinn = { version = "0.0.10", features = ["datagram", "tracing"] }
http = "1"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
] }
rustls = { version = "0.23", default-features = false, features = ["logging"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.37"

h3 = { version = "0.0.8", features = ["tracing"] }
bytes = "1.10.1"

[dev-dependencies]
rustls-pemfile = "2.2.0"
