[package]
name = "jetstream_quic"
version = "15.2.0"
edition.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
documentation.workspace = true
readme.workspace = true

[dependencies]
h3-quinn = { version = "0.0.10", features = ["datagram", "tracing"] }
http = "1"
quinn = { version = "0.11", default-features = false, features = [
  "runtime-tokio",
  "rustls",
] }
rustls = { version = "0.23", default-features = false, features = ["logging"] }
tokio = { version = "1.48", features = ["full"] }
tracing = "0.1.37"
h3 = { version = "0.0.8", features = ["tracing"] }
bytes = "1.11.1"
async-trait = "0.1.89"
askama = "0.15.1"
jetstream_rpc = { version = "15.2.0", path = "../jetstream_rpc", features = ["x509"] }
tokio-util.workspace = true
futures = "0.3.31"

[dev-dependencies]
rustls-pemfile = "2.2.0"
