[package]
name = "jetstream_radar"
version = "10.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
argh = { version = "0.1.13", optional = true }
jetstream = {version="10.1.0",path="../../", default-features = false }
reqwest = { version = "0.12.24", optional = true }
rustls = { version = "0.23.34", features = ["ring"], optional = true }
thiserror = "2.0.17"
tokio = {version = "1.48.0", optional = true}
tracing-subscriber = { version = "0.3.20", optional = true }
url = { workspace = true, optional = true }
worker = { workspace = true }
worker-macros = { workspace = true }

[features]
default = ["server", "client"]
server = ["jetstream/cloudflare"]
client = ["jetstream/websocket","jetstream/tracing", "jetstream/tokio", "url", "tokio", "argh", "reqwest", "rustls", "tracing-subscriber"]
url = ["dep:url"]
tokio = ["dep:tokio"]
argh = ["dep:argh"]
reqwest = ["dep:reqwest"]
rustls = ["dep:rustls"]
tracing-subscriber = ["dep:tracing-subscriber"]

[[bin]]
name = "radar"
path = "src/bin/client.rs"
