[package]
name = "jetstream_rpc"
version = "11.1.0"
edition = { workspace = true }
description = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
readme = { workspace = true }
documentation.workspace = true


[lib]
bench = false
crate-type = ["rlib", "staticlib", "cdylib"]

[dependencies]
trait-variant = "0.1.2"
futures = "0.3.31"
tokio-util = { workspace = true, features = ["codec"] }
bytes = "1.10.0"
thiserror = "2.0.17"
url = { workspace = true }
iroh = { workspace = true, optional = true }
s2n-quic = { workspace = true, optional = true }
turmoil = { workspace = true, optional = true }
worker = { workspace = true, optional = true }
tokio = { version = "1.47.1", features = ["sync","rt"] }
async-trait = "0.1.89"
serde = { version = "1.0.228", features = ["derive"], optional = true }
jetstream_error = { version = "11.1.0", path = "../jetstream_error" }
miette = { version = "7.6.0", features = ["fancy"] }
tracing = "0.1.44"
[target.'cfg(loom)'.dependencies]
loom = "0.7.2"

[build-dependencies]
cfg_aliases = { workspace = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
jetstream_wireformat = { version = "11.1.0", path = "../jetstream_wireformat", default-features = false, features = [
  "std",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
jetstream_wireformat = { version = "11.1.0", path = "../jetstream_wireformat" }

[dev-dependencies]
bytes = "1.10.0"
anyhow = "1.0.100"
s2n-quic = { workspace = true }
proptest = "1.9.0"


[features]
default = []
iroh = ["dep:iroh"]
s2n-quic = ["dep:s2n-quic"]
turmoil = ["dep:turmoil"]
pkarr = []
cloudflare = ["dep:worker"]
serde = ["dep:serde"]
